# RVC-App

./: .gitignore  CLAUDE.md  INSTALL.md  LICENSE  README.md  api_gui.py  gui_v1.py  pyproject.toml
.github/workflows/: release.yml
RvcRealtimeGui/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  RvcRealtimeGui.csproj  app.manifest
RvcRealtimeGui/Assets/: terminal.html
RvcRealtimeGui/Models/: FileBrowseRequest.cs  RvcConfig.cs  TrainingModels.cs
RvcRealtimeGui/Pages/: FileBrowserPage.xaml  FileBrowserPage.xaml.cs  ModelTuningPage.xaml  ModelTuningPage.xaml.cs  RvcModePage.xaml  RvcModePage.xaml.cs
RvcRealtimeGui/Properties/: launchSettings.json
RvcRealtimeGui/Services/: PortKiller.cs  ProcessRunner.cs  PseudoConsole.cs  RvcApiClient.cs
configs/: config.json  config.py
infer/modules/train/: training_jobs.py
installer/: RvcRealtimeGui.nsi  build.ps1
