[project]
name = "rvc-beta"
version = "0.1.0"
description = "Retrieval-based Voice Conversion WebUI"
authors = [{ name = "lj1995" }]
license = { text = "MIT" }
requires-python = ">=3.9,<3.11"
dependencies = [
    "torch==2.4.0",
    "torchaudio==2.4.0",
    "torchvision==0.19.0",
    "Cython>=3.0.11",
    "gradio==3.34.0",
    "pydub>=0.25.1",
    "soundfile>=0.12.1",
    "ffmpeg-python>=0.2.0",
    "tensorboardX>=2.6.2.2",
    "fairseq==0.12.2",
    "faiss-cpu==1.7.3",
    "Jinja2>=3.1.2",
    "json5>=0.9.25",
    "librosa>=0.10.0",
    "llvmlite>=0.43.0",
    "Markdown>=3.6",
    "matplotlib>=3.7.0",
    "matplotlib-inline>=0.1.3",
    "numba>=0.60.0",
    "numpy>=1.23.5,<2.0",
    "scipy>=1.13.1",
    "praat-parselmouth>=0.4.2",
    "Pillow>=9.1.1",
    "pyworld>=0.3.4",
    "resampy>=0.4.2",
    "scikit-learn>=1.5.1",
    "tensorboard>=2.17.0",
    "tqdm>=4.63.1",
    "tornado>=6.1",
    "Werkzeug>=2.2.3",
    "uc-micro-py>=1.0.1",
    "sympy>=1.11.1",
    "tabulate>=0.8.10",
    "PyYAML>=6.0",
    "pyasn1>=0.4.8",
    "pyasn1-modules>=0.2.8",
    "fsspec>=2022.11.0",
    "absl-py>=1.2.0",
    "audioread>=3.0.1",
    "uvicorn>=0.21.1",
    "colorama>=0.4.5",
    "torchcrepe>=0.0.20",
    "python-dotenv>=1.0.0",
    "av>=12.3.0",
    "joblib>=1.1.0",
    "httpx>=0.27.0",
    "fastapi==0.88",
    "torchfcpe>=0.0.4",
    "ffmpy==0.3.1",
    "setuptools>=82.0.1",
    "freesimplegui>=5.2.0.post1",
    "sounddevice>=0.4.7",
    "einops>=0.8.2",
    "noisereduce>=3.0.3",
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "customtkinter>=6.0.0",
]

[project.optional-dependencies]
# NVIDIA CUDA (デフォルト)
nvidia = [
    "onnxruntime-gpu>=1.18.1",
]
# macOS
macos = [
    "onnxruntime",
]
# AMD ROCm
amd = [
    "tensorflow-rocm",
    "onnxruntime",
    "onnxruntime-gpu",
]
# Intel DirectML (Windows)
dml = [
    "onnxruntime-directml",
]
# Realtime VC GUI
realtime = [
    "PySimpleGUI",
    "sounddevice<0.5.0",
    "einops",
    "noisereduce",
    "flask",
    "flask-cors",
]
# Realtime VC GUI + DirectML
realtime-dml = [
    "PySimpleGUI",
    "sounddevice<0.5.0",
    "einops",
    "noisereduce",
    "onnxruntime-directml",
    "flask",
    "flask-cors",
]

[tool.uv]
package = false
# torch は PyPI の CUDA ビルドを使用
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cuda", marker = "sys_platform != 'darwin'" },
]
torchaudio = [
    { index = "pytorch-cuda", marker = "sys_platform != 'darwin'" },
]
torchvision = [
    { index = "pytorch-cuda", marker = "sys_platform != 'darwin'" },
]

